--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/cli": "^2.17.1",
     "next": "latest",
+    "next-sanity": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
