--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "0.0.20",
+    "@radix-ui/react-id": "0.0.6",
     "@radix-ui/react-switch": "0.0.15",
     "@sanity/cli": "^2.17.1",
     "next": "latest",
