--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
+  repo: astrank/natural-freedom
   branch: main # Branch to update (optional; defaults to master)
+  base_url: https://naturalfreedom.vercel.app
 media_folder: public/img
 public_folder: img
 collections:
