--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-id": "0.0.6",
     "@radix-ui/react-switch": "0.0.15",
     "@sanity/cli": "^2.17.1",
+    "fs": "^0.0.1-security",
     "next": "latest",
     "next-sanity": "^0.4.0",
     "react": "^17.0.2",
