--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,8 +14,6 @@ collections:
       slug: "{{fields.slug}}"
       format: "json"
       fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Text", name: "text", widget: "markdown" }
           - {
                 label: "Slug",
                 name: "slug",
@@ -26,3 +24,7 @@ collections:
                         "Alphanumeric with dashes or underscores",
                     ],
             }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Author", name: "author", widget: "string" }
+          - { label: "Author Link", name: "author_link", widget: "string" }
+          - { label: "Text", name: "text", widget: "markdown" }
