--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,30 +1,27 @@
 backend:
-    name: git-gateway
-    repo: astrank/natural-freedom
-    branch: main # Branch to update (optional; defaults to master)
-    base_url: https://naturalfreedom.vercel.app
+  name: git-gateway
+  repo: astrank/natural-freedom
+  branch: main # Branch to update (optional; defaults to master)
+  base_url: https://naturalfreedom.vercel.app
 media_folder: public/img
 public_folder: img
 collections:
-    - label: "Post"
-      name: "post"
-      folder: "public/data/posts"
-      create: true
-      identifier_field: "title"
-      slug: "{{fields.slug}}"
-      format: "json"
-      fields:
-          - {
-                label: "Slug",
-                name: "slug",
-                widget: "string",
-                pattern:
-                    [
-                        "^[a-zA-Z0-9-_]+$",
-                        "Alphanumeric with dashes or underscores",
-                    ],
-            }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Author", name: "author", widget: "string" }
-          - { label: "Author Link", name: "author_link", widget: "string" }
-          - { label: "Text", name: "text", widget: "markdown" }
+  - label: "Post"
+    name: "post"
+    folder: "public/data/posts"
+    create: true
+    identifier_field: "title"
+    slug: "{{fields.slug}}"
+    format: "json"
+    fields:
+      - {
+          label: "Slug",
+          name: "slug",
+          widget: "string",
+          pattern:
+            ["^[a-zA-Z0-9-_]+$", "Alphanumeric with dashes or underscores"],
+        }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Author Link", name: "author_link", widget: "string" }
+      - { label: "Post content", name: "body", widget: "markdown" }
