--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next-sanity": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "react-markdown": "^8.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
